deployment-scripts/production/reelcruit-candidate-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reelcruit-candidate
  namespace: production
  labels:
    app: reelcruit-candidate
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reelcruit-candidate
  template:
    metadata:
      labels:
        app: reelcruit-candidate
    spec:
      containers:
        - name: reelcruit
          image: reelcruitapp/reelcruit-candidate-frontend
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: reelcruit-candidate-svc
  namespace: production
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: reelcruit-candidate
