deployment-scripts/production/reelcruit-candidate-fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: candidate-fe-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
   - host: candidate.reelcruit.com
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reelcruit-candidate-svc
            port:
              number: 3000

   - host: www.candidate.reelcruit.com
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reelcruit-candidate-svc
            port:
              number: 3000
